# atguigu_xiaozhi

./: .clangd  .gitignore  CMakeLists.txt  build_env.bat  build_env.ps1  compile_commands.json  findings.md  partitions.csv  progress.md  res.json  task_plan.md  项目代码逻辑总结.md
.codebuddy/skills/planning-with-files/: SKILL.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/audio/: xiaozhi_hard_codec.c  xiaozhi_hard_codec.h  xiaozhi_opus_decoder.c  xiaozhi_opus_decoder.h  xiaozhi_opus_encodec.c  xiaozhi_opus_encodec.h  xiaozhi_sr.c  xiaozhi_sr.h
main/button/: xiaozhi_button.c  xiaozhi_button.h
main/common/: common_types.h
main/display/: xiaozhi_display.c  xiaozhi_display.h  xiaozhi_lcd.c  xiaozhi_lcd.h
main/internet/: xiaozhi_active.c  xiaozhi_active.h  xiaozhi_wifi.c  xiaozhi_wifi.h  xiaozhi_ws.c  xiaozhi_ws.h
main/pre_data/: xiaozhi_hello.txt
